syntax = "proto3";

package net.sec_chan;

message Crypto_PubKeyExchange {
  message Psk { // Pre-shared key
  }
  message ECDH { // Elliptic-curve Diffie-Hellman
    bytes pub_key = 1;
  }
  message DiffieHellman {
    bytes pub_key = 1;
  }
  message Rsa {
    bytes pub_key = 1;
  }
}

enum Crypto_AEADCipher {
  AES_GCM = 0; // AES in Galois/Counter Mode
}

//..
message Create {
  message Request {
    uint32 lifetime = 1; // Session lifetime in seconds
    oneof key_exch_algo {
      Crypto_PubKeyExchange.DiffieHellman dh = 10;
      Crypto_PubKeyExchange.ECDH ecdh = 11;
      Crypto_PubKeyExchange.Rsa rsa = 12;
      Crypto_PubKeyExchange.Psk psk = 13; // Pre-shared key.
    };
    Crypto_AEADCipher block_cypher = 20;
    uint32 nonce_length = 30;
  }
  message Response {
    bytes nonce = 1;
    optional bytes pub_key = 2; // Server's public key
  }
}